--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
    <h1>Página home</h1>
+   <p>vendas= R$5.500,00
+   </p>
    <a href="vendas.html">Ir para a página de vendas</a> 
 </body>
 </html>
